--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,13 @@
 			<url>https://mavenrepo.razorthink.net/artifactory/libs-release-local</url>
 		</repository>
 	</distributionManagement>
+	<repositories>
+		<repository>
+			<id>repository.jboss.org-public</id>
+			<name>JBoss.org Maven repository</name>
+			<url>https://repository.jboss.org/nexus/content/groups/public</url>
+		</repository>
+	</repositories>
 
 	<dependencies>
 		<dependency>
